--- a/src/components/InstructionView.css
+++ b/src/components/InstructionView.css
@@ -5,11 +5,14 @@
 .instructionText {
   background-color: #f8f8f8;
   font-size: 32px;
-  padding: 10px;
+  padding: 10px 20px;
   border: 1px solid gray;
   border-radius: 15px;
   color: #666666;
-  text-align: center;
+  box-sizing: border-box;
+  width: 90%;
+
+  margin: 20px 10px;
 }
 
 .instructionText .focusedText {
@@ -20,7 +23,8 @@
 .countersContainer {
   display: flex;
   flex-flow: row-reverse wrap;
-  justify-content: center;
+  justify-content: flex-end;
+  margin: 20px 10px;
 }
 
 .instructionText .red {
