--- a/src/components/Counter.css
+++ b/src/components/Counter.css
@@ -46,6 +46,6 @@
 }
 
 .counter.yellow {
-  background-color: yellow;
-  border-color: burlywood;
+  background-color: yellowgreen;
+  border-color: green;
 }
