--- a/src/components/InstructionView.css
+++ b/src/components/InstructionView.css
@@ -22,7 +22,7 @@
 
 .countersContainer {
   display: flex;
-  flex-flow: row-reverse wrap;
+  flex-flow: row-reverse nowrap;
   justify-content: flex-end;
   margin: 20px 10px;
 }
