--- a/src/components/InstructionView.css
+++ b/src/components/InstructionView.css
@@ -1,30 +1,28 @@
-.instructionView {
+.instructionView .countersContainer {
+  display: flex;
+  flex-flow: row-reverse nowrap;
+  justify-content: flex-end;
   
+  margin: 20px 10px;
 }
 
 .instructionText {
   background-color: #f8f8f8;
   font-size: 32px;
-  padding: 10px 20px;
+  color: #666666;
+
   border: 1px solid gray;
   border-radius: 15px;
-  color: #666666;
+
   box-sizing: border-box;
   width: 90%;
-
+  padding: 10px 20px;
   margin: 20px 10px;
 }
 
 .instructionText .focusedText {
   color: black;
   font-weight: bold;
-}
-
-.countersContainer {
-  display: flex;
-  flex-flow: row-reverse nowrap;
-  justify-content: flex-end;
-  margin: 20px 10px;
 }
 
 .instructionText .red {
